--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=1920, initial-scale=1.0">
     <script src="Matriz.js"></script>
     <script src="Draw.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
     <script src="redeNeural.js"></script>
     <title>Rede Neural</title>
 </head>
